--- a/package.json
+++ b/package.json
@@ -7,18 +7,19 @@
     "url": "https://github.com/fs-opensource/hapi-request-user/issues"
   },
   "devDependencies": {
-    "code": "~5.2.0",
+    "code": "~5.2.4",
+    "eslint": "~5.12.1",
     "eslint-config-standard": "~12.0.0",
     "eslint-plugin-import": "~2.14.0",
-    "eslint-plugin-node": "~8.0.0",
+    "eslint-plugin-node": "~8.0.1",
     "eslint-plugin-promise": "~4.0.1",
     "eslint-plugin-standard": "~4.0.0",
-    "hapi": "~17.8.1",
-    "husky": "~1.3.0",
-    "lab": "~18.0.0"
+    "hapi": "~18.0.0",
+    "husky": "~1.3.1",
+    "lab": "~18.0.1"
   },
   "engines": {
-    "node": ">=8.0.0"
+    "node": ">=8"
   },
   "homepage": "https://github.com/fs-opensource/hapi-request-user#readme",
   "keywords": [
