--- a/package.json
+++ b/package.json
@@ -7,16 +7,16 @@
     "url": "https://github.com/futurestudio/hapi-request-user/issues"
   },
   "devDependencies": {
-    "code": "~5.2.4",
+    "@hapi/code": "~5.3.1",
+    "@hapi/hapi": "~18.3.1",
+    "@hapi/lab": "~18.1.2",
     "eslint": "~5.16.0",
     "eslint-config-standard": "~12.0.0",
-    "eslint-plugin-import": "~2.17.0",
+    "eslint-plugin-import": "~2.17.2",
     "eslint-plugin-node": "~8.0.1",
-    "eslint-plugin-promise": "~4.1.0",
+    "eslint-plugin-promise": "~4.1.1",
     "eslint-plugin-standard": "~4.0.0",
-    "hapi": "~18.1.0",
-    "husky": "~2.0.0",
-    "lab": "~18.0.1"
+    "husky": "~2.0.0"
   },
   "engines": {
     "node": ">=8"
@@ -40,7 +40,7 @@
     "url": "git+https://github.com/futurestudio/hapi-request-user.git"
   },
   "scripts": {
-    "test": "lab --assert code --leaks --coverage --lint",
+    "test": "lab --assert @hapi/code --leaks --coverage --lint",
     "prepush": "npm test"
   }
 }
